--- a/src/template.html
+++ b/src/template.html
@@ -12,4 +12,8 @@
   <body>
     <% preact.bodyEnd %>
   </body>
+  <script
+    id="DragDropTouch"
+    src="https://bernardo-castilho.github.io/DragDropTouch/DragDropTouch.js"
+  ></script>
 </html>
