--- a/src/template.html
+++ b/src/template.html
@@ -16,4 +16,12 @@
     id="DragDropTouch"
     src="https://bernardo-castilho.github.io/DragDropTouch/DragDropTouch.js"
   ></script>
+  <script
+    type="module"
+    src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+  ></script>
+  <script
+    nomodule
+    src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+  ></script>
 </html>
